Fixed bug with links in header on small screen.

--- a/app/assets/stylesheets/_commons.css.scss
+++ b/app/assets/stylesheets/_commons.css.scss
@@ -1,6 +1,9 @@
 $text-color: #000000;
 $links-color: #000000;
 $hovered-links-color: #333333;
+$footer-height: 60px;
+
+$break-small: 1400px;
 
 @mixin paper {
   display: block;
