--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -10,18 +10,21 @@ header {
   z-index: 100;
   height: 80px;
   opacity: 0.90;
+  padding: 15px 50px;
+ 
 
   a.logo {
     float: left;
   }
 
-
   .profile {
     float: right;
 
-    > a {
-      font-size: 14px;
-      font-weight: 700;
+    > a { 
+      font-weight: 600;
+      @media screen and (max-width: $break-small) {
+        font-size: 11px;
+      }
       text-transform: uppercase;
     }
   }
@@ -48,13 +51,13 @@ header {
       position: relative;
       text-transform: uppercase;
       font-family: 'Lato',sans-serif;
-      font-size: 16px;
-      font-weight: 400;
     }
 
     > ul > li > a {
-      font-size: 14px;
-      font-weight: 700;
+      font-weight: 600;
+      @media screen and (max-width: $break-small) {
+        font-size: 11px;
+      }
       text-transform: uppercase;
     }
 
@@ -67,7 +70,7 @@ header {
       line-height: 18px;
       margin-left: 8px;
       margin-right: 5px;
-      margin-top: 2px;
+      margin-top: 3px;
       opacity: 0.4;
     }
 
